cmake_minimum_required(VERSION 2.8.9)
project(wdb)

#Bring the headers, such as Student.h into the project
include_directories(include)

#Can manually add the sources using the set command as follows:
#set(SOURCES src/mainapp.cpp src/Student.cpp)

#However, the file(GLOB...) allows for wildcard additions:
file(GLOB SOURCES "src/*.cc" "src/*.h")

add_executable(wdb ${SOURCES})
